# LeppDelaunay

./: .gitignore  CMakeLists.txt  MainDesign.ui  README  README.md  Tarea_2.kdev4  Triangles.txt  Triangles.txt.backup27  Triangles1.txt  Triangles2.txt  Triangles3.txt  Triangles4.txt
.kdev4/: Tarea_2.kdev4
Presentación/: .~lock.Presentacion Avance Tarea 2.odp#  NOT_THIS_YET_Presentacion Avance Tarea 2.odp  Presentacion Avance Tarea 2.odp  Presentacion Final Tarea 2.odp
src/: Angle.cpp  Angle.h  Canvas.cpp  Canvas.h  Constants.h  Edge.cpp  Edge.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  Triangle.cpp  Triangle.h  Triangles.txt  Vertex.cpp  Vertex.h  View.cpp  View.h  main.cpp  tarea_2.cpp  tarea_2.h  tarea_2.ui
